ingressr.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shapes.acc-fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shapes.acc.com
    http:
      paths:
      - path: /crc
        backend:
          serviceName: service1
          servicePort: 4200
      - path: /sqr
        backend:
          serviceName: service2
          servicePort: 8080
